# lanctl

./: package-lock.json  package.json
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/static/: index.html
apps/desktop/src/components/: FileList.tsx  QrCode.tsx  Sidebar.tsx
apps/src-tauri/webui/: index.html
apps/src-tauri/webui/assets/: index-JQl-kCIf.js
